--- a/index.html
+++ b/index.html
@@ -2,36 +2,30 @@
 <html lang="en">
 <head>
 
-  <!-- Basic Page Needs
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Basic Page Needs–––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>Jott.ly</title>
 
   <meta name="description" content="">
   <meta name="author" content="">
 
-  <!-- Mobile Specific Metas
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Mobile Specific Metas–––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- FONT
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- FONT–––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
 
-  <!-- CSS
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- CSS–––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
 
-  <!-- Favicon
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Favicon––––––––––––––––––––––––––––––––––––––––––––––––––-->
   <link rel="icon" type="image/png" href="images/favicon.png">
 
 </head>
 <body>
   
-  <!-- Header
-  –––––––––––––––––––––––––––––––––––––––––––––––––– -->
+<!-- Header–––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div id="header">
     <img src="images/logo.png" />
       <nav>
@@ -45,5 +39,56 @@
     <input type="email" placeholder="Enter your email"/>
     <button type="submit">Sign Up Now</button>
   </div>
+<!-- Benefits==================================================-->
+  <div id="benefits">
+    <h2>What is Jott.ly exactly?</h2>
+    <p>Our web application allows you to create documents with real-time editing and collaborating capabilities, while storing content and information to share with others.</p>
+
+    <img src="images/app.png" alt="Jottly's Web Application" />
+  </div>
+<!-- Pricing ============================== -->
+<div id="pricing">
+  <h2>How much will it cost me?</h2>
+  <p>It’s rather inexpensive to use Jott.ly’s suite of tools compared to several other services out there. We have several options to fit your budget and needs:</p>
+    
+    <div class="pricebox">
+      <h3>Individuals &amp; Family</h3>
+      <h4>$2</h4>
+      <p>per month/per user</p>
+        <ul>
+          <li>Unlimited notes</li>
+          <li>Unlimited members</li>
+          <li><strong>2GB</strong> of storage</li>
+        </ul>
+        <button>Select this plan</button>
+    </div>
+
+    <div class="pricebox">
+      <h3>Small Businesses</h3>
+      <h4>$5</h4>
+      <p>per month/per user</p>
+        <ul>
+          <li>Unlimited notes</li>
+          <li>Unlimited members</li>
+          <li><strong>15GB</strong> of storage</li>
+          <li>Real-time collaboration</li>
+        </ul>
+        <button>Select this plan</button>
+    </div>
+
+     <div class="pricebox">
+      <h3>Enterprises</h3>
+      <h4>$8</h4>
+      <p>per month/per user</p>
+        <ul>
+          <li>Unlimited notes</li>
+          <li>Unlimited members</li>
+          <li><strong>Unlimited</strong> of storage</li>
+          <li>Real-time collaboration</li>
+        </ul>
+        <button>Select this plan</button>
+    </div>
+
+</div>
 </body>
 </html>
