made header text white and styled buttons in nav

--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     </div>
       
     <div class="container">
-      <div class="nine columns"></div>
+      <div class="nine columns headertext"></div>
+        
         <h1>An easier way to write &amp; collaborate</h1>
         <p>Put down the pen and paper. Jott.ly helps you organize your <strong>life, home and office</strong>. It's a simple way to store and share ideas with your loved ones, friends and colleagues.</p>
       </div>
