slightly fixed the CSS

--- a/index.html
+++ b/index.html
@@ -30,33 +30,37 @@
 <!-- Header–––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <div id="header">
     <div class="container">
-      <div class="two columns">
-        <div class="logo"><a href="#"><img src="images/logo.png" alt="Jottly" /></a>
+      <div class="row">
+        <div class="two columns">
+          <div class="logo"><a href="#"><img src="images/logo.png" alt="Jottly" /></a>
+          </div>
         </div>
+          <div class="ten columns">
+            <nav>
+              <ul>
+                <li><a class="btn" href="#">Sign In</li></a>
+                <li><a class="btn" href="#">Sign Up Now</li></a>
+              </ul>
+            </nav>
+          </div>
       </div>
-        <div class="ten columns">
-          <nav>
-            <ul>
-              <li><a class="btn" href="#">Sign In</li></a>
-              <li><a class="btn" href="#">Sign Up Now</li></a>
-            </ul>
-          </nav>
-        </div>
     </div>
       
     <div class="container">
-      <div class="nine columns headertext"></div>
+      <div class="nine columns headertext">
 
         <h1>An easier way to write &amp; collaborate</h1>
         <p>Put down the pen and paper. Jott.ly helps you organize your <strong>life, home and office</strong>. It's a simple way to store and share ideas with your loved ones, friends and colleagues.</p>
       </div>
+    </div>
+
       <div class="container">
         <div class="row">
-          <div class="five columns alpha">
+          <div class="six columns">
             <input type="email" placeholder="Enter your email"/>
           </div>
-          <div class="four columns omega">
-            <button type="submit">Sign Up Now</button>
+          <div class="three columns">
+              <input class="button" value="Sign Up Now" type="button"></input>
           </div>
         </div>
       </div>
@@ -64,11 +68,11 @@
 <!-- Benefits==================================================-->
   <div id="benefits">
   <div class="container">
-    <div class="twelve columns offset-by-two">
+    <div class="twelve columns">
       <h2>What is Jott.ly exactly?</h2>
       <p>Our web application allows you to create documents with real-time editing and collaborating capabilities, while storing content and information to share with others.</p>
     </div>
-    <div class="fourteen columns offset-by-one">
+    <div class="twelve columns">
       <img class="scale-with-grid" src="images/app.png" alt="Jottlys Web Application" />
     </div>
   </div>
@@ -79,7 +83,7 @@
 <!-- Pricing ============================== -->
 <div id="pricing">
   <div class="container">
-    <div class="twelve columns offset-by-two">
+    <div class="twelve columns">
       <h2>How much will it cost me?</h2>
       <p>It’s rather inexpensive to use Jott.ly’s suite of tools compared to several other services out there. We have several options to fit your budget and needs:</p>
     </div>
@@ -97,8 +101,9 @@
             <li>Unlimited notes</li>
             <li>Unlimited members</li>
             <li><strong>2GB</strong> of storage</li>
+            <button>Select this plan</button>
           </ul>
-          <button>Select this plan</button>
+          
           </section>
         </div>
       </div>
@@ -191,7 +196,7 @@
   <div class="container">
   <div class="twelve columns offset-by-two">
     <h2>Give it a try before you commit.</h2>
-    <p>You can test drive Jott.ly before deciding on one of our plans. Jusyt give us your email address, and we'll send you the details:</p>
+    <p>You can test drive Jott.ly before deciding on one of our plans. Just give us your email address, and we'll send you the details:</p>
   </div>
     <div class="container">
       <div class="row">
