fixed the CSS I AM A GOD

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <div class="container">
         <div class="row">
           <div class="six columns">
-            <input type="email" placeholder="Enter your email"/>
+            <input class="u-full-width" placeholder="Enter your email address" id="email address" type="email">
           </div>
           <div class="three columns">
               <input class="button" value="Sign Up Now" type="button"></input>
@@ -96,14 +96,13 @@
         </header>
         <section>
         <h4><span>$</span>2</h4>
-        <p>per month<br/>per user</p>
+        <p>per month<br/>/per user</p>
           <ul>
             <li>Unlimited notes</li>
             <li>Unlimited members</li>
             <li><strong>2GB</strong> of storage</li>
-            <button>Select this plan</button>
           </ul>
-          
+          <button>Select this plan</button>
           </section>
         </div>
       </div>
@@ -115,8 +114,8 @@
             <h3>Small Businesses</h3>
           </header>
           <section>
-            <h4><span>$</span>5</h4>
-            <p>per month<br/>/per user</p>
+            <h4><span>$</span>8</h4>
+              <p>per month<br/>/per user</p>
               <ul>
                 <li>Unlimited notes</li>
                 <li>Unlimited members</li>
@@ -154,7 +153,7 @@
 <!-- Testimonials ================================================== -->
 <div id="testimonials">
   <div class="container">
-    <div class="twelve columns offset-by-two">
+    <div class="twelve columns">
       <h2>Who's Using it?</h2>
       <p>Jott.ly has around 150,000 satisfied customers sharing and collaborating with teams throughout 35 countries. Here’s what a few had to say:</p>
     </div>
@@ -194,14 +193,14 @@
 <!-- Call to Action ================================================== -->
 <div id="action">
   <div class="container">
-  <div class="twelve columns offset-by-two">
+  <div class="twelve columns">
     <h2>Give it a try before you commit.</h2>
     <p>You can test drive Jott.ly before deciding on one of our plans. Just give us your email address, and we'll send you the details:</p>
   </div>
     <div class="container">
       <div class="row">
         <div class="eight columns alpha">
-          <input type="text" placeholder="Enter your email address"/>
+          <input class="u-full-width" placeholder="Enter your email address" id="email address" type="email">
         </div>
         <div class="four columns omega">
           <button type="submit">Sign Up Now</button>
@@ -219,29 +218,27 @@
 <!-- Footer ================================================== -->
 
 <div id="footer">
-  <div id="container">
-  <div class="row">
-    <div class="eight columns">
-      <nav>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
-          <li><a href="#">Privacy Policy</a></li>
-          <li><a href="#">Terms</a></li>
-        </ul>
-      </nav>
-    </div>
-  
-  
-    <div class="two columns">
-      <img src="images/small_logo.png" alt="Jottly" />
-    </div>
-      
-    <div class="two columns"></div>
-      <p>&copy; 2014. Jott.ly. All Rights Reserved.</p>
+  <div class="container">
+    <div class="row">
+      <div class="eight columns">
+        <nav>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Privacy Policy</a></li>
+            <li><a href="#">Terms</a></li>
+          </ul>
+        </nav>
+      </div>
+
+      <div class="two columns">
+        <img src="images/small_logo.png" alt="Jottly" />
+      </div>
+      <div class="two columns">
+        <p>&copy; 2014. Jott.ly. All Rights Reserved.</p>
+      </div>  
     </div>
   </div>
-</div>
 </div>
 
 </body>
