--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   <link rel="stylesheet" href="css/base.css">
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/skeleton.css">
+  <link rel="stylesheet" href="css/animate.css">
 
 
 <!-- Favicon––––––––––––––––––––––––––––––––––––––––––––––––––-->
@@ -28,17 +29,23 @@
 <body>
   
 <!-- Header–––––––––––––––––––––––––––––––––––––––––––––––––– -->
-  <div id="header">
+  <div id="header" class="animated fadeIn">
     <div class="container">
       <div class="row">
-        <div class="two columns">
+        <div class="six columns">
           <div class="logo"><a href="#"><img src="images/logo.png" alt="Jottly" /></a>
           </div>
         </div>
-          <div class="ten columns">
+          <div class="three columns">
             <nav>
               <ul>
-                <li><a class="btn" href="#">Sign In</li></a>
+                <li><a href="#">Sign In</li></a>
+              </ul>
+            </nav>
+          </div>
+          <div class="three columns">
+            <nav>
+              <ul>
                 <li><a class="btn" href="#">Sign Up Now</li></a>
               </ul>
             </nav>
@@ -47,16 +54,17 @@
     </div>
       
     <div class="container">
-      <div class="nine columns headertext">
-
+      <div class="row">
+      <div class="eight columns headertext animated fadeInDown">
         <h1>An easier way to write &amp; collaborate</h1>
         <p>Put down the pen and paper. Jott.ly helps you organize your <strong>life, home and office</strong>. It's a simple way to store and share ideas with your loved ones, friends and colleagues.</p>
+      </div>
       </div>
     </div>
 
       <div class="container">
         <div class="row">
-          <div class="six columns">
+          <div class="five columns headerbut">
             <input class="u-full-width" placeholder="Enter your email address" id="email address" type="email">
           </div>
           <div class="three columns">
